[FIX] Calendar z-index

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -81,3 +81,7 @@
 .input-group-sm .input-group-append {
   margin-left: -4px;
 }
+
+.react-datepicker-popper {
+  z-index: 100 !important;
+}
